--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@ body {
     background: #e8eaf6;
     font-family: ubuntu, sans;
     font-size: 10pt;
+    height:97vh;
 }
 .container {
     margin-left: 5%;
@@ -10,6 +11,7 @@ body {
     overflow: auto;
     padding: 5px;
 	background: white;
+    height:100%;
 }
 h1 {
     text-align: center;
@@ -33,6 +35,7 @@ th, td {
    border-bottom: 1px solid #d5d5d5;
    font-size:12pt;
    text-align:center;
+   max-width:350px;
 }
 th {
    padding:13px;
@@ -42,6 +45,7 @@ th {
 }
 td {
    padding:7px;
+   word-wrap: break-word;
 }
 tr:hover {
     background-color: #fafafa
