--- a/templates/cloners.html
+++ b/templates/cloners.html
@@ -16,6 +16,9 @@
                 <p class="note"><strong>Before trading, make sure to check the <a href="https://docs.google.com/spreadsheets/d/1aj7bIySJI1JwCD8KHeBOlZnG4Hg27KI12H8RiNynsmY">Gen 6 hacked Pokémon list</a> and the <a href="
 https://docs.google.com/spreadsheets/d/16o6k4wphh4x1JMXrETHotlYTq1BwyyaEch8O96HsBMQ ">Gen 7 hacked Pokémon list</a>.</strong></p>
             {{/if_eq}}
+            {{#if_eq name "trainers"}}
+                <p class="note"><strong>If you wish to become an approved EV trainer, please read <a href="https://docs.google.com/document/d/1eKzzvcZ1zWZXU_GyFhhBUT2wj4dMaiJOCnn669VR83U">this document</a> before applying.</strong></p>
+            {{/if_eq}}
 			<div class="popup"><input type="checkbox" onclick="toggleFilter(this)">Only show online {{name}}.</div>
 			<table>
                 <tr class="header" onclick="filter()">
