--- a/public/style.css
+++ b/public/style.css
@@ -41,10 +41,8 @@ a:pressed {
     color: #5253D2;
 }
 table {
-    margin-top:10px;
-    margin-bottom:10px;
-    margin-left:auto;
-    margin-right:auto;
+    margin: 10px 0px;
+    width: 100%;
     border-collapse: collapse;
 }
 th, td {
