--- a/templates/linecount.html
+++ b/templates/linecount.html
@@ -11,9 +11,11 @@
 		<div class="container">
 			{{#if data}}
 				<h1>Line count for {{user}} in {{room}} :</h1>
-				{{#each data}}				
-						<p><strong>{{this.date}}</strong>: {{this.linecount}}</p>
-				{{/each}}
+				<ul style="list-style:none;">
+					{{#each data}}				
+							<li><strong>{{this.date}}</strong>: {{this.linecount}}</li>
+					{{/each}}
+				</ul>
 				<h3>Total line count: {{total}}</h3>
 			{{else}}
 				<h2>This user has no lines in the past month.</h2>
