--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ body {
     overflow: auto;
 	background: #FDFDFD;
     height:100%;
-    padding: 0px;
+    padding: 0px 0px 10px 0px;
     max-width: 1300px;
 }
 h1 {
@@ -25,8 +25,8 @@ h2 {
     text-decoration: underline #5253D2;
 }
 h3 {
-    margin: 0px 36px 0px;
-    padding: 2px;
+    margin: 0px 40px 0px;
+    padding: 10px;
 }
 li {
     font-weight: normal;
