more font fuckery

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body {
     background: #D7D7D7;
-    font-family: 'Segoe UI', 'DejaVu Sans', sans-serif;
+    font-family: 'Segoe UI', 'Segoe', 'Liberation Sans', 'Arial', sans-serif;
     font-size: 11pt;
     line-height: 1.4;
 }
