--- a/templates/linecount.html
+++ b/templates/linecount.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			{{#if data}}
 				<h1>Line count for {{user}} in {{room}} :</h1>
-				<ul style="list-style:none;margin:0px 30px;">
+				<ul style="list-style:none;margin:0px;">
 					{{#each data}}				
 							<li><strong>{{this.date}}</strong>: {{this.linecount}}</li>
 					{{/each}}
