--- a/templates/cloners.html
+++ b/templates/cloners.html
@@ -13,11 +13,10 @@
 				<p class="note">Editors: {{editors}}</p>
 			{{/if}}
             {{#if_eq name "scammers"}}
-                <p class="note"><strong>Before trading, make sure to check the <a href="https://docs.google.com/spreadsheets/d/1aj7bIySJI1JwCD8KHeBOlZnG4Hg27KI12H8RiNynsmY/edit#gid=0">Gen 6 hacked Pokémon list</a> and the <a href="
-https://docs.google.com/spreadsheets/d/1aj7bIySJI1JwCD8KHeBOlZnG4Hg27KI12H8RiNynsmY/edit#gid=269965621">Gen 7 hacked Pokémon list</a>.</strong></p>
+                <p class="note"><strong>Before trading, make sure to check the <a href="./hackmons">Hacked Pokémon list</a>.</strong></p>
             {{/if_eq}}
-            {{#if_eq name "trainers"}}
-                <p class="note"><strong>If you wish to become an approved EV trainer, please read <a href="https://docs.google.com/document/d/1eKzzvcZ1zWZXU_GyFhhBUT2wj4dMaiJOCnn669VR83U">this document</a> before applying.</strong></p>
+            {{#if_eq name "hackmons"}}
+                <p class="note"><strong>When trading Pokémon originating from Generation 6, also check the <a href="https://docs.google.com/spreadsheets/d/1aj7bIySJI1JwCD8KHeBOlZnG4Hg27KI12H8RiNynsmY/edit#gid=0">Gen 6 Hacked Pokémon List</a></strong></p>
             {{/if_eq}}
             {{#unless tokenData}}
                 {{#unless noOnline}}
