Increase size of editors text

--- a/templates/cloners.html
+++ b/templates/cloners.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
 			{{#if editors}}
-				<p class="note">Editors: {{editors}}</p>
+				<p class="editors">Editors: {{editors}}</p>
 			{{/if}}
             {{#if_eq name "scammers"}}
                 <p class="note"><strong>Before trading, make sure to check the <a href="./hackmons">Hacked Pokémon list</a>.</strong></p>
