--- a/public/style.css
+++ b/public/style.css
@@ -79,6 +79,11 @@ tr:hover {
     opacity: 0.7;
     margin-left: 60px;
 }
+.editors {
+    font-size: 11pt;
+    opacity: 0.8;
+    margin-left: 60px;
+}
 .helptopic {
     margin-left: 45px;
     opacity: 0.87;
