Fix pariticpant number

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -40,7 +40,7 @@
 				{{else}}
 					<h1>{{data.format}} tournament:</h1>
 					<h3><b>Tour Helpers:</b> {{tourHelpers}}</h3>
-					<h2>Signups in progress! PM a Tour Helper to sign up! Current participants ({{num}}):</h2>
+					<h2>Signups in progress! PM a Tour Helper to sign up! Current participants ({{data.num}}):</h2>
 					<ul>
 						{{#each data.participants}}
 							<li>{{this}}</li>
