--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -10,7 +10,7 @@
         <div class="container">
 			<table>
                 <tr class="header">
-                    <th>Username</th><th>Wins</th><th>Losses</th><th>W/L</th><th>Points</th>
+                    <th>Username</th><th>Wins</th><th>Losses</th><th>W/L</th><th>Monthly Points</th><th>Total Points</th>
                 </tr>
                 {{#each this}}
                     <tr>
