--- a/public/style.css
+++ b/public/style.css
@@ -74,15 +74,39 @@ td {
 tr:hover {
     background-color: #fafafa
 }
-details {
-    margin: 0px 60px 0px;
+details span {
+	color: #586A8B;
 }
 summary {
+    text-decoration: underline #586A8B;
+    display:block;
+}
+summary::-webkit-details-marker {
+    display: none;
+}  
+summary::after {
+    color:#5253D2;
+    content: '\25B6';
+    padding-left: 0.4em;
+    font-size:90%;
+    text-decoration: none;
+}
+details[open] > summary::after {
+    color:#5253D2;
+    content: '\25BC';
+    padding-left:0.4em;
+    font-size:90%;
+    text-decoration: none;
+}
+.clonernote details {
+    margin: 0px 60px 0px;
+}
+.clonernote summary {
     font-size: 14pt;
     font-weight: bold;
     text-decoration: underline #586A8B;
 }
-details p {
+.clonernote details p {
     margin: 2px 20px;
 }
 .note {
