--- a/templates/clonernotes.html
+++ b/templates/clonernotes.html
@@ -15,7 +15,7 @@
 					<details class="clonernote">
 						<summary class="clonernote">{{@key}}</summary>
 						{{#each this}}
-							{{if this.[0]}}
+							{{#if this.[0]}}
 								<p class="clonernote">[{{parse_date @key}}] {{this.[1]}} -{{this.[0]}}</p>
 							{{else}}
 								<p class="clonernote">[{{parse_date @key}}] {{this.[1]}}</p>							
