Work in progress rewrite of the webserver templating and page generation system

--- a/templates/editdoc.html
+++ b/templates/editdoc.html
@@ -13,7 +13,7 @@
 	
 	<body>
 		<form id="form" method="post">
-            <textarea rows="50" cols="200" name="content">{{content}}</textarea>
+            <textarea rows="50" cols="200" name="data">{{content}}</textarea>
             <input type="submit" value="Submit">
         </form>
 	</body>
