--- a/templates/linecount.html
+++ b/templates/linecount.html
@@ -12,7 +12,7 @@
 				if (e.keyCode === 13) {
 					let newname = document.getElementById('nameinput').value.toLowerCase().replace(/[^a-z0-9]/g, '');
 
-					window.location.href = window.location.href.split('&').slice(0, -1).join('&') + '&user=' + newname;
+					window.location.href = window.location.href.replace('user={{user}}', 'user=' + newname);
 				}
 			}
 		</script>
