--- a/public/style.css
+++ b/public/style.css
@@ -85,7 +85,7 @@ tr:hover {
     background-color: #fafafa
 }
 details span {
-    color: #586A8B;
+    color: #3F76A3;
 }
 summary {
     text-decoration: underline #586A8B;
