--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -3,14 +3,14 @@
 <html>
     <head>
         <meta charset="UTF-8"><link rel="stylesheet" type="text/css" href="../style.css">
-        <title>In-game leaderboard - Kid A</title>
+        <title>Tour Point Scoreboard - Kid A</title>
     </head>
     
     <body>
         <div class="container">
 			<table>
                 <tr class="header">
-                    <th>Username</th><th>Wins</th><th>Losses</th><th>W/L</th><th>Points</th>
+                    <th>Username</th><th>Points (this month)</th><th>Points (total)</th>
                 </tr>
                 {{#each this}}
                     <tr>
