Fix sorting leaderboard

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -10,7 +10,7 @@
         <div class="container">
 			<table>
                 <tr class="header">
-                    <th>Username</th><th>Points (this month)</th><th>Points (total)</th>
+                    <th>Username</th><th>Points to Spend</th><th>Total Points Earned</th>
                 </tr>
                 {{#each this}}
                     <tr>
