Final phase of my tournaments rewrite
This allows the scoreboard system to be used by other rooms as well, and even without the tours aspect. wow

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8"><link rel="stylesheet" type="text/css" href="../style.css">
-        <title>Tour Point Scoreboard - Kid A</title>
+        <title>{{currency}} Scoreboard - Kid A</title>
     </head>
     
     <body>
@@ -13,7 +13,7 @@
             {{/if}}
 			<table>
                 <tr class="header">
-                    <th>Username</th><th>Points to Spend</th><th>Total Points Earned</th>
+                    <th>Username</th><th>{{leftcolumn}}</th><th>Total {{currency}} Earned</th>
                 </tr>
                 {{#each data}}
                     <tr>
