Make options more humanly readable

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -18,9 +18,9 @@
                         <tr>
                     {{/mod}}
                     {{#if checked}}
-                        <td><input type="checkbox" name="{{name}}" checked="">{{name}}</td>
+                        <td><input type="checkbox" name="{{name}}" checked="">{{label}}</td>
                     {{else}}
-                        <td><input type="checkbox" name="{{name}}">{{name}}</td>
+                        <td><input type="checkbox" name="{{name}}">{{label}}</td>
                     {{/if}}
                     {{#mod @index 3 2}}
                         </tr>
