--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -10,6 +10,9 @@
     <body>
         <div class="container">
             <h1>Your Profile</h1>
+
+            <p class="note"><strong>Any information entered on this page is publicly available for any user on PS to access. Do not enter any personal information, or anything you don't wish to have posted publicly.</strong></p>
+
             <form method="POST">
                 {{#each fields}}
                     <h3>{{label}}</h3>
