Part 1 of the cloners/scammers overhaul. Cloners done, scammers almost done

--- a/templates/addlist.html
+++ b/templates/addlist.html
@@ -3,15 +3,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="../style.css">
-        <title>{{user}} - Kid A</title>
+        <link rel="stylesheet" type="text/css" href="../../style.css">
+        <title>Adding {{id}} entry - Kid A</title>
     </head>
     
     <body>
         <div class="container">
-            <h1>Your Profile</h1>
-
-            <p class="note"><strong>Any information entered on this page is publicly available for any user on PS to access. Do not enter any personal information, or anything you don't wish to have posted publicly.</strong></p>
+            <h1>Adding {{id}} entry</h1>
 
             <form method="POST">
                 {{#each fields}}
